03_kubernetes/pgadmin/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f pgadmin-compose.yaml
      --out ../../03_kubernetes/pgadmin/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 80
  selector:
    io.kompose.service: pgadmin4
status:
  loadBalancer: {}
