03_kubernetes/pgadmin/ic-webapp-networks-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ic-webapp-networks
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/ic-webapp-networks: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ic-webapp-networks: "true"
